# p2p-cli-chat

./: Cargo.toml  Makefile  README.md
src/: lib.rs
src/config/: cli.rs  mod.rs
src/handlers/: mod.rs  printer.rs  stdin.rs  ui.rs
src/models/: message.rs
src/network/: client.rs  message.rs  server.rs
src/ui/: event.rs  events.rs  mod.rs  render.rs  renderer.rs  state.rs
