[package]
name = "websocket-cli-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
crossterm = "0.29.0"
dotenvy = "0.15.7"
env = "1.0.1"
futures-util = { version = "0.3.31", features = ["sink"] }
http = "1.3.1"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tokio-websockets = { version ="0.11.4", features = ["server", "client", "ring", "fastrand"] }
uri = "0.4.0"
uuid = { version = "1.17.0", features = ["v4"] }
whoami = "1.6.0"
